--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="port.css">
+    <link rel="stylesheet" href="index.css">
     <title>Cibi</title>
 </head>
 <body>
@@ -15,10 +15,25 @@
             <li><a>Home</a></li>
             <li><a>Skills</a></li>
             <li><a>Projects</a></li>
+            <li><a>Experience</a></li>
             <li><a>About</a></li>
-            
         </ul>
     </nav>
-    
+
+    <h1 class="font">Hello, I'm </h1>
+    <h1 class="name">Cibikanna</h1>
+    <h1 style="text-shadow: 1px 1px 1px;">Software Developer</h1>
+    <p class="carrier_objective">Ambitious software developer seeking an entry-level role<br> to utilize coding skills and contribute to innovative, scalable solutions.</p>
+    <div class="buttons">
+
+    <button class="cv"><a href="https://drive.google.com/file/d/1t-fJppG0ijzRG83gS_OHqXq2_yFXYl7R/view?usp=drive_link" target="_blank">Get CV</a></button>
+    </div>
+    <div class="image">
+        <img id="i" src="images/dev.png" alt="developement image">
+    </div>
+    <div id="skills">
+        <nav class="skillbar"><h1>Skills</h1></nav>
+    </div>
+    <script src="index.js"></script>
 </body>
 </html>
