--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
         </div>
         <ul class="nav">
             <li><a>Home</a></li>
-            <li><a>Skills</a></li>
-            <li><a>Projects</a></li>
-            <li><a>Experience</a></li>
+            <li><a id="mskill">Skills</a></li>
+            <li><a id="mproject">Projects</a></li>
+            <!-- <li><a>Experience</a></li> -->
             <li><a>About</a></li>
         </ul>
     </nav>
@@ -26,14 +26,78 @@
     <p class="carrier_objective">Ambitious software developer seeking an entry-level role<br> to utilize coding skills and contribute to innovative, scalable solutions.</p>
     <div class="buttons">
 
-    <button class="cv"><a href="https://drive.google.com/file/d/1t-fJppG0ijzRG83gS_OHqXq2_yFXYl7R/view?usp=drive_link" target="_blank">Get CV</a></button>
+    <button class="cv"><a href="https://drive.google.com/file/d/1t-fJppG0ijzRG83gS_OHqXq2_yFXYl7R/view?usp=drive_link" target="_blank"><b>Get CV</b></a></button>
     </div>
+
     <div class="image">
         <img id="i" src="images/dev.png" alt="developement image">
     </div>
+
     <div id="skills">
         <nav class="skillbar"><h1>Skills</h1></nav>
+        <h1>Programming Languages</h1>
+        <section class="languages">
+            <div class="container">
+                <img  class="logo" src="images/java.png" alt="java image">
+
+            </div>
+            <div class="container">
+                <img  class="logo" src="images/c.png" alt="C Programming image">
+
+            </div>
+            <div class="container">
+                <img  class="logo" src="images/php.png" alt="php image">
+
+            </div>
+            
+        </section>
+        <h1>Web Developement</h1>
+        <section class="languages">
+            <div class="container">
+                <img  class="logo" src="images/html.png" alt="html image">
+            </div>
+            <div class="container">
+                <img  class="logo" src="images/css.png" alt="css image">
+            </div>
+            <div class="container">
+                <img  class="logo" src="images/js.png" alt="javascript image">
+            </div>
+            <div class="container">
+                <img  class="logo" src="images/laravel.png" alt="Laravel image">
+            </div>
+        </section>
+        <h1>Version Control</h1>
+        <section class="languages">
+            <div class="container">
+                <img  class="logo" src="images/git.png" alt="github image">
+            </div>
+            <div class="container">
+                <img  class="logo" src="images/bit.png" alt="css image">
+            </div>
+            <div class="container">
+                <img  class="logo" src="images/srctree.png" alt="javascript image">
+
+            </div>
+        </section>
     </div>
+    <div id="projects">
+        <nav class="skillbar"><h1>Projects</h1></nav>
+        <section class="languages">
+            <div class="container">
+                <img class="logo" src="images/Minesweeper.png" alt="Minesweeper">
+                <P><a href="https://onlinegdb.com/lpiIOHYba" target="_blank">Minesweeper</a></P>
+            </div>
+            <div class="container">
+                <img class="logo" src="images/xo.png" alt="Minesweeper">
+                <P><a href="https://onlinegdb.com/-5UCQxTWb">Tic Tac Toe</a></P>
+            </div>
+            <div class="container">
+                <img class="logo" src="images/word.png" alt="Minesweeper">
+                <P><a href="https://onlinegdb.com/ntR5SqK6n" target="_blank">Word Puzzle</a></P>
+            </div>
+        </section>
+    </div>
+    
     <script src="index.js"></script>
 </body>
 </html>
